--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,3 +14,71 @@ html,body {
     -webkit-line-clamp: none;
     transition: all ease 500ms;
 }
+
+
+.box-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.2);
+    font-size: 30px;
+    padding: 1em;
+    vertical-align: top;
+    transition: 0.3s color, 0.3s border, 0.3s transform, 0.3s opacity;
+  }
+
+
+[class*=loader-] {
+    display: inline-block;
+    width: 3em;
+    height: 3em;
+    color: inherit;
+    vertical-align: middle;
+    pointer-events: none;
+  }
+
+
+  .loader-icon {
+    border: 0.4em solid transparent;
+    border-top-color: currentcolor;
+    border-radius: 50%;
+    -webkit-animation: 1s loader-icon linear infinite;
+            animation: 1s loader-icon linear infinite;
+    position: relative;
+  }
+  .loader-icon:before {
+    content: "";
+    display: block;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: -0.4em;
+    left: -0.4em;
+    border: 0.4em solid currentcolor;
+    border-radius: 50%;
+    opacity: 0.5;
+  }
+
+  @-webkit-keyframes loader-icon {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes loader-icon {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
