--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ html,body {
 }
 
 .M_title_wrappper .title {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     font-weight: 500;
     margin-bottom: 0;
     flex-shrink: 0;
