--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,3 +128,13 @@ html,body {
     flex: 1 0 100%;
   }
 }
+
+.task-description:hover {
+  color: #0d6efd; /* Bootstrap Primary Color */
+  cursor: pointer;
+}
+
+.form-check-input:checked {
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
